--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-
-"homepage": "http://shivamnautiyal-dev.github.io/react_tasks",
-"name": "my-app",
+  "homepage": "http://shivamnautiyal-dev.github.io/react_tasks",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,16 +13,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-	
   },
   "eslintConfig": {
     "extends": [
